--- a/assets/locales/en/messages.json
+++ b/assets/locales/en/messages.json
@@ -1,11 +1,11 @@
 {
     "appName": {
-        "message": "QR code"
+        "message": "QR hyperlinks"
     },
     "appShortName": {
-        "message": "QR code"
+        "message": "QR hyperlinks"
     },
     "appDescription": {
-        "message": "Converts QR codes into hyperlinks."
+        "message": "Converts QR codes into hyperlinks"
     }
 }
